fix scale text wrap

--- a/TimeLineTest/src/time-line/time-line-scale/time-line-scale.component.css
+++ b/TimeLineTest/src/time-line/time-line-scale/time-line-scale.component.css
@@ -16,6 +16,7 @@
     border-left: 1px dimgray solid;
     border-top: 2px dimgray solid;
     
+    white-space: nowrap;
     box-sizing: border-box;
     overflow: hidden;
     padding-left: 0.3rem;
